# tse_data

./: .gitignore  README.md  table_schema.json
cf_config_president/: pyproject.toml
cf_config_president/cf_config_president/: cf_config_president.py
cf_config_president/tests/: test_cf_config_president.py
cf_download_simplified_data/: pyproject.toml  requirements.txt
cf_download_simplified_data/cf_download_simplified_data/: cf_download_simplified_data.py
cf_download_simplified_data/tests/: test_cf_download_simplified_data.py
cf_load_bq/: pyproject.toml  requirements.txt
cf_load_bq/cf_load_bq/: cf_load_bq.py
cf_load_bq/tests/: test_cf_load_bq.py
cf_load_firebase/: pyproject.toml  requirements.txt
cf_load_firebase/cf_load_firebase/: cf_load_firebase.py
cf_load_firebase/tests/: test_cf_load_firebase.py
cf_process_config/: pyproject.toml
cf_process_config/cf_process_config/: cf_process_config.py
cf_process_config/tests/: test_cf_process_config.py
poc_files_in_folders/: pyproject.toml
poc_files_in_folders/poc_files_in_folders/: file_in_folders.py
poc_files_in_folders/tests/: test_poc_files_in_folders.py
